@@ -1,7 +1,9 @@
 package com.example.demo.controller;
 
 import com.example.demo.dtos.CategoryDTO;
+import com.example.demo.services.category.impl.CategoryService;
 import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.BindingResult;
@@ -13,8 +15,9 @@ import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("api/v1/categories")
+@RequiredArgsConstructor
 public class CategoryController {
-
+    private final CategoryService categoryService;
     @GetMapping("")
     public ResponseEntity<String> getAllCategories(
             @RequestParam("page") int page,
@@ -22,21 +25,19 @@ public class CategoryController {
     ){
         return ResponseEntity.ok(String.format("getAllCategories, page = %d, limit = %d",page, limit));
     }
-
     @PostMapping("")
-    public ResponseEntity<?> insertCategory(
-            @Valid  @RequestBody CategoryDTO categoryDTO,
-            BindingResult result) {
-
-        if (result.hasErrors()) {
-            List<String> errorsMessages = result.getFieldErrors().stream()
-                    .map(FieldError::getDefaultMessage)
-                    .collect(Collectors.toList());
-            return ResponseEntity.badRequest().body(errorsMessages);
+    public ResponseEntity<?> createCategory(
+            @Valid @RequestBody CategoryDTO categoryDTO,
+            BindingResult result
+    ){
+        if(result.hasErrors()){
+            List<String> errorMessages = result.getFieldErrors()
+                    .stream().map(FieldError::getDefaultMessage).toList();
+            return ResponseEntity.badRequest().body(errorMessages);
         }
-
-        // If validation succeeds, continue with your logic
-        return ResponseEntity.ok("CategoryDTO is valid: " + categoryDTO);
+        categoryService.createCategory(categoryDTO);
+        return ResponseEntity.ok("This is insertCategory"+categoryDTO);
     }
+
 
 }
